--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cokfinancial",
+  "name": "next-train",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
+    "bootstrap": "^5.0.2",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
