--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.7.3"
   },
   "devDependencies": {
     "eslint": "7.31.0",
